v0.5.5
------
* Fixed gem version requirements

v0.5.4
------
* Convert DTS 6.1 audio to 6 channels when transcoding

v0.5.3
------
* Some transcoding fixes
* Enable defining a padding length for the episode number via the data file (for example, for shows with more than 100 episodes per season)
* For season 1 episodes, fetch TheTVDB data first from the absolute episode number (as most anime shows don’t have the concept of seasons), and only after from the 'correct' season and episode number

v0.5.2
------
* Set sort metadata fields for TV Show episodes

v0.5.1
------
* Added option for renaming a file to the format recommended by Plex
* Now fetches metadata for TV show episodes from TheTVDB.com instead of IMDB
* When fetching metadata by name, and several records are found, the user now has the choice of which to use
* Correctly set Media Kind metadata tag for both TV show episodes and Movies
* Some other fixes

v0.4.4
------
* Support Ruby v1.8.7
* Fetch IMDB metadata for TV show episodes as well

v0.4.1
------
* Automatic download of subtitles via opensubtitles.org
* Automatic infer IMDB id from opensubtitles.org

v0.3.3
------
* Fixed SublerCLI call

v0.3.2
------
* Fixed AC3 conversion failing in some cases

v0.3.1
------
* Support for IMDB ids starting with 0

v0.3.0
------
* Removed dependency on MKV gem and MKVToolnix
* Added support for converting OGG videos
* Other fixes

v0.2.0
------
* Add to iTunes
* Filter audio and subtitles by language
* Some fixes

v0.1.1
------
* Better output

v0.1.0
------
* Added support for supplying directories to command line utility
* Better quality encoding of audio and video
* Create movies name .mp4 instead of .m4v

v0.0.2
------
* Added command line utility to convert media
* Do not clean up all subtitles in the folder after processing one file, ensure that only the current file's are deleted

v0.0.1
------
* Mac OSX implementation